--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/pako": "^2.0.4",
     "autoprefixer": "^10.4.23",
     "jszip": "^3.10.1",
@@ -17,12 +19,14 @@
     "prismarine-chunk": "^1.39.0",
     "prismarine-nbt": "^2.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/three": "^0.182.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.4",
     "postcss": "^8.4.49",
